--- a/views/content/checkout.html
+++ b/views/content/checkout.html
@@ -73,27 +73,45 @@
           <div class="checkout-main">
             <div class="row">
               <div class="col-md-4">
-                <h5 class="brand-primary">Enter a new shopping address</h5>
-                <form action="">
+                <h5 class="brand-primary">Enter a new shipping address</h5>
+                <form  name="shippingForm">
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Name *">
+                    <input type="text" name="name" ng-model="user.firstname" required class="form-control" placeholder="Name *">
+                  </div>
+                  <div class="text-center" ng-show="shippingForm.name.$invalid && shippingForm.name.$touched" role="alert">
+                      Please enter your name
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Address *">
+                    <input type="text" name="address" ng-model="user.shippingaddress" required class="form-control" placeholder="Address *">
+                  </div>
+                  <div class="text-center" ng-show="shippingForm.address.$invalid && shippingForm.address.$touched" role="alert">
+                      Please enter your address
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="Pin *">
+                    <input type="text" name="pin" ng-model="user.shippingpincode" required class="form-control" placeholder="Pin *">
+                  </div>
+                  <div class="text-center" ng-show="shippingForm.pin.$invalid && shippingForm.pin.$touched" role="alert">
+                    Please enter your pin
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="City *">
+                    <input type="text" name="city" ng-model="user.shippingcity" required class="form-control" placeholder="City *">
+                  </div>
+                  <div class="text-center" ng-show="shippingForm.city.$invalid && shippingForm.city.$touched" role="alert">
+                    Please enter your city
                   </div>
                   <div class="form-group">
-                    <input type="text" class="form-control" placeholder="State *">
+                    <input type="text" name="state" ng-model="user.shippingstate" required class="form-control" placeholder="State *">
+                  </div>
+                  <div class="text-center" ng-show="shippingForm.state.$invalid && shippingForm.state.$touched" role="alert">
+                    Please enter your state
                   </div>
                   <div class="form-group">
-                    <input type="tel" class="form-control" placeholder="Phone *">
+                    <input type="tel" name="phone" ng-model="user.shippingcontact" required class="form-control" placeholder="Phone *">
                   </div>
-                  <a href="" class="text-uppercase btn btn-primary">Save &amp; Continue</a>
+                  <div class="text-center" ng-show="shippingForm.phone.$invalid && shippingForm.phone.$touched" role="alert">
+                    Please enter your phone
+                  </div>
+                  <a href="" class="text-uppercase btn btn-primary" ng-click="proceedToSummary(user,shippingForm)">Save &amp; Continue</a>
                 </form>
               </div>
             </div>
@@ -127,28 +145,28 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr class="text-center letter-space font-semibold" ng-repeat="product in Checkoutcart">
+                    <tr class="text-center letter-space font-semibold" ng-repeat="product in allcart">
                       <td>
                         <figure>
                           <div class="cart-imgholder m-center">
-                            <img ng-src="{{product.img}}" class="img-responsive round">
+                            <img ng-src="{{product.image | serverimage}}" class="img-responsive round">
                           </div>
-                          <figcaption class="text-center text-uppercase">{{product.name}}</figcaption>
+                          <figcaption class="text-center text-uppercase">{{product.options.realname}}</figcaption>
                         </figure>
                       </td>
                       <td>
-                        <input type="number" class="text-center quantity" name="" id="" value="{{product.quantity}}" disabled>
+                        <input type="number" class="text-center quantity" name="" id="" value="{{product.qty}}" disabled>
                         <!-- <span class="more inline-block brand-primary-bg white"><i class="fa fa-plus"></i></span>
                         <span class="less inline-block brand-primary-bg white"><i class="fa fa-minus"></i></span> -->
                       </td>
                       <td>
                         <div class="cart-amount">
-                          <p>RS. {{product.amount}}</p>
+                          <p>RS. {{product.price}}</p>
                         </div>
                       </td>
                       <td>
                         <div class="cart-total-amount">
-                          <p>RS. {{product.totalamount}}</p>
+                          <p>RS. {{product.subtotal}}</p>
                         </div>
                         <!-- <div class="remove text-right">
                           <button class="btn btn-primary text-uppercase no-radius">Remove</button>
@@ -175,7 +193,7 @@
                 </div>
                 <div class="cart-grand-total clearfix brand-brown-bg brand-brown-dark font-semibold">
                   <span class="text-uppercase pull-left">Grand Total</span>
-                  <span class="pull-right text-uppercase">Rs. 575.00</span>
+                  <span class="pull-right text-uppercase">Rs. {{totalcart}}</span>
                 </div>
 
                 <div class="shipping">
@@ -186,7 +204,7 @@
                     </div>
                     <div class="col-md-6">
                       <div class="text-right">
-                        <a href="" class="btn btn-primary text-uppercase">Continue</a>
+                        <a href="" class="btn btn-primary text-uppercase" ng-click="proceedToPayment()">Continue</a>
                       </div>
                     </div>
                   </div>
