--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -151,7 +151,7 @@
       }
     }
     .health-count {
-      font-size: 35px;
+      font-size: 30px;
     }
     .icon {
       @include square(80px);
@@ -360,6 +360,7 @@
   .section-story {
     .slider {
       padding: 20px;
+      margin: 20px;
       .glyphicon-chevron-left:before {
         color: $brand-brown-light;
         font-size: 45px;
@@ -384,6 +385,7 @@
       .descp {
         width: 100%;
         margin: 58px 0;
+        p {
         &:before {
           width: 39px;
           height: 29px;
@@ -394,14 +396,16 @@
           width: 39px;
           height: 29px;
           background-size: contain;
-          top: 65px;
-          right: 0;
+          right: auto;
         }
+      }
       }
     }
   }
   .story-video {
-    height: 230px;
+    width: 50%;
+    margin: 0 auto;
+    height: auto;
   }
   .consult-chart {
     height: auto;
@@ -483,10 +487,10 @@
       }
     }
     .health-count {
-      font-size: 29px;
+      font-size: 20px;
     }
     .icon {
-      @include square(70px);
+      @include square(65px);
     }
   }
   .health-diet {
@@ -961,6 +965,7 @@
   }
   .section-story {
     padding: 30px 0;
+    .slider { margin: 0; }
     .carousel-control {
       .glyphicon-chevron-left,
       .glyphicon-chevron-right {
@@ -985,13 +990,16 @@
         top: 10px;
       }
       .descp {
+        p {
         &:before,
         &:after {
           @include square(20px);
         }
       }
+      }
     }
   }
+  .story-video { width: 80%; }
   .health-diet {
     .diet-info {
       margin: 20px 0;
@@ -1124,6 +1132,8 @@
      .glyphicon-chevron-right:before { zoom: 0.6; }
      .glyphicon-chevron-left:before { zoom: 0.6; }
   }
+  // terms privacy
+    .terms, .privacypolicy { margin: 50px 30px; }
 }
 @media (max-width: 480px) {
   // login
@@ -1467,6 +1477,7 @@
       }
     }
   }
+  .story-video { width: 100%; }
   .health-diet {
     .diet-info {
       h4 {
@@ -1595,4 +1606,6 @@
      .glyphicon-chevron-right:before { zoom: 0.5; }
      .glyphicon-chevron-left:before { zoom: 0.5; }
   }
+  // terms privacy
+  .terms, .privacypolicy { margin: 40px 10px; }
 }
