--- a/views/footer.html
+++ b/views/footer.html
@@ -88,7 +88,7 @@
                     </div>
                     <div class="copyright brand-brown-dark letter-space">
                        <p>Copyright &copy; Selfcare Support Pvt. Ltd.</p>
-                       <p>All Rights Reserved | <a href="#/privacypolicy" class="brand-brown-dark">Privacy Policy</a> | <a href="#/termsandcondition">T&amp;C</a></p>
+                       <p>All Rights Reserved | <a href="#/privacypolicy" class="brand-brown-dark">Privacy Policy</a> | <a href="#/termsandcondition" class="brand-brown-dark">T&amp;C</a></p>
                     </div>
                 </div>
             </div>
