--- a/views/content/healthyaging.html
+++ b/views/content/healthyaging.html
@@ -1,6 +1,6 @@
 <div class="health-management">
   <div class="banner selfcare-image">
-    <img src="img/apple.jpg" alt="">
+    <img src="img/banners/healthmanagement.jpg" alt="">
     <div class="get-center">
       <h2 class="text-uppercase letter-space white font-semibold">health management</h2>
     </div>
