--- a/views/modal/login.html
+++ b/views/modal/login.html
@@ -88,16 +88,16 @@
                             <div class="form-group">
                                 <input type="email" name="email" ng-model="login.email" class="form-control" required placeholder="Email">
                             </div>
-                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.email.$touched " role="alert">
+                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.email.$dirty " role="alert">
                                 Please enter email
                             </div>
                             <div class="form-group">
                                 <input type="password" name="password" ng-model="login.password" class="form-control" required placeholder="Password">
                             </div>
-                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.password.$touched" role="alert">
+                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.password.$dirty" role="alert">
                                 Please enter password
                             </div>
-                            <div class="text-center" ng-show="loginForm.$invalid && loginForm.password.$touched" ng-show="invalidinput" role="alert">
+                            <div class="text-center" ng-show="invalidinput" role="alert">
                                 Invalid email or password.
                             </div>
                             <div class="text-center submit">
