--- a/views/header.html
+++ b/views/header.html
@@ -18,8 +18,8 @@
                 <h1>
                   <a href="#/home">
                     <img src="img/logo.png" alt="">
-                    <span class="font-baubodi">for</span>Aliment Control
-                    <!-- <flex-slider class="carousel slide" flex-slide="list in health" animation="fade" direction-Nav="false" control-Nav="false" playText="Play" animationSpeed="100" slideshowspeed="100">
+                    <span class="font-baubodi">for</span> Health Management
+                    <!-- <flex-slider class="carousel" flex-slide="list in health" animation="fade">
                       <li>
                         <span>{{list}}</span>
                       </li>
